# area-plot-post-syn

./: .gitignore  README.md  area_plot.py  environment.yml  gr_heep_top.csv  makefile  requirements.txt  setup.cfg
scripts/: area_plot.py
scripts/utils/: utils_area.py
src/area_plot/: main.py  utils_area.py
