[metadata]
name = area-plot
version = 0.1.1
description = A tool for generating treemap and sunburst plots from area reports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vlsi-lab/area-plot-post-syn.git
author = Flavia Guella
author_email = flavia.guella@polito.it
#license = TODO
classifiers =
    Programming Language :: Python :: 3
#    License :: OSI Approved :: TODO
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    # Dependencies
    pandas>=2.0.2
    plotly>=6.0.0
    regex>=2022.0.0
    kaleido>=0.2.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    area-plot = area_plot.main:main

[options.packages.find]
where = src
